# ai-image-audit

./: .gitignore  LICENSE  README.md  package.json
frontend/: index.html  package.json  vite.config.js
frontend/src/: app.vue  main.js
frontend/src/components/: LanguageSelector.vue
frontend/src/components/AnalysisReport/: AnalysisReport.vue
frontend/src/components/ImageCard/: ExifInfo.vue  FFTChart.vue  ImageCard.vue
frontend/src/components/ImageUploader/: ImageUploader.vue
frontend/src/components/common/: ErrorMessage.vue
frontend/src/i18n/: index.js
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/services/: storageService.js
frontend/src/utils/: fileUtils.js
rust-core/: Cargo.toml
rust-core/src/: lib.rs
