[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
image = "0.24"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"

# exif crate 改为可用的版本（但现在我们已改为 JS 读取 exif，所以也可删除）
# exif = "0.7.1" ❌错误版本
# 删除此行或注释掉：我们使用 JS 的 exifr 替代
